<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hafniumsoftware.diapason.MainActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dip">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="#4b5162"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/PopupOverlay"
                app:title="@string/app_name"
                app:titleTextColor="#fff">

                <Button
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:background="@android:drawable/ic_menu_search" />
            </android.support.v7.widget.Toolbar>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4b5162	"
                app:tabMode="scrollable">

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_1"/>

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_2" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_3" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_4" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_5" />

            </android.support.design.widget.TabLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_menu_rotate" />

    </android.support.design.widget.CoordinatorLayout>
    <RelativeLayout
        android:id="@+id/musicbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:visibility="gone"
        android:background="#5294e2">

        <Button
            android:id="@+id/musicbar_pp_btn"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="60dp"
            android:background="@android:drawable/ic_media_pause" />

        <Button
            android:id="@+id/musicbar_prev_btn"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:drawable/ic_media_previous" />

        <Button
            android:id="@+id/musicbar_next_btn"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="110dp"
            android:background="@android:drawable/ic_media_next" />

        <TextView
            android:id="@+id/musicbar_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@id/musicbar_next_btn"
            android:text=""
            android:singleLine="true"
            android:maxLength="18"
            android:textColor="@color/White"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/musicbar_artist_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/musicbar_next_btn"
            android:layout_marginStart="60dp"
            android:layout_below="@id/musicbar_title_text"
            android:singleLine="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text=""
            android:maxLength="24"
            android:textColor="#ccc"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>
